--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -6,6 +6,7 @@ $primary: #EF8C20;
 $secondary: #121B3C;
 $yellow: #F2BA1D;
 $gray: #B2B4BD;
+$gray2: #8E8E8E; // use in placeholders
 $lightgray: #E6E9EB;
 $darkgray1: #333333; // use in headers
 $darkgray2: #3A3A3A; // use in subheader / light headers
@@ -40,6 +41,24 @@ $spacers: (
 a {
   color: #FFF;
   display: block;
+}
+
+/** Helper Classes **/
+
+.mt {
+  &-10 {
+    margin-top: 10px;
+  }
+}
+
+// aligns element inside class
+.align {
+  &-center {
+    * {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
 
 /** MUI Component Overrides **/
