--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -100,6 +100,13 @@ a {
     letter-spacing: 0.1px;
     line-height: 24px;
   }
+  &.MuiTypography-body2 {
+    font-family: 'Roboto';
+    font-size: 16px;
+    letter-spacing: 0.1px;
+    line-height: 24px;
+    color: $gray2;
+  }
 }
 
 
