task: added account dropdown component

--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -12,6 +12,8 @@ $darkgray1: #333333; // use in headers
 $darkgray2: #3A3A3A; // use in subheader / light headers
 $white: #FFF;
 $offwhite: #F1F5F8;
+$darkblue: #0A122D;
+$darkorange: #EF5F20;
 
 $theme-colors: (
   'primary': $primary,
