task: added letter avatar

--- a/src/components/DashboardWrapper/styles.module.scss
+++ b/src/components/DashboardWrapper/styles.module.scss
@@ -61,6 +61,7 @@
 
       .avatar {
         margin-right: 17px;
+        background: nth($avatar-colors, random(length($avatar-colors)));
       }
 
       .icon {
