--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -20,6 +20,8 @@ $green: #12B255;
 $indigo: #3476D6;
 $purple: #724586;
 
+$avatar-colors: $yellow, $lightbrown, $green, $indigo, $purple, $darkblue, $darkorange, $primary, $secondary;
+
 $theme-colors: (
   'primary': $primary,
   'secondary': $secondary,
