--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -53,6 +53,12 @@ $spacers: (
   }
 }
 
+.mb {
+  &-15 {
+    margin-bottom: 15px;
+  }
+}
+
 // aligns element inside class
 .align {
   &-center {
@@ -77,7 +83,7 @@ $spacers: (
     line-height: 28px;
   }
   &.MuiTypography-h2 {
-    font-family: 'Roboto-Medium';
+    font-family: 'Roboto';
     font-size: 20px;
     letter-spacing: 0.4px;
     line-height: 24px;
@@ -134,6 +140,15 @@ hr.MuiDivider-root {
       padding: 0;
       margin: 0;
     }
+  }
+}
+
+// Contribution Colors
+
+// @temp: move when data is available
+span {
+  &.question {
+    color: $yellow;
   }
 }
 
