--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -6,13 +6,16 @@ $primary: #EF8C20;
 $secondary: #121B3C;
 $gray: #B2B4BD;
 $gray2: #8E8E8E; // use in placeholders
+$gray3: #8A8A8A; // use in parent title of cards
 $lightgray: #E6E9EB;
+$lightgray2: #656A7C; // use in meta
 $darkgray1: #333333; // use in headers
 $darkgray2: #3A3A3A; // use in subheader / light headers
 $white: #FFF;
 $offwhite: #F1F5F8;
 $darkblue: #0A122D;
 $darkorange: #EF5F20;
+$red: #E50E56; //use in refute hypothesis
 // use in contribution heirarchy - in order QHED-AAA
 $yellow: #F2BA1D;
 $lightbrown: #EC8A21;
