polish faq, navlink key and initial question page layout

--- a/src/pages/Member/index.scss
+++ b/src/pages/Member/index.scss
@@ -2,6 +2,7 @@
 
 .wrapper {
   display: flex;
+  background: $secondary;
 }
 
 .appMain {
@@ -10,5 +11,4 @@
   margin-top: 2vh;
   background: $offwhite;
   border-top-left-radius: 12px;
-  padding: 40px;
 }
