--- a/src/components/Card/styles.module.scss
+++ b/src/components/Card/styles.module.scss
@@ -1,10 +1,11 @@
 @import '~global/styles';
 
-.paper {
+div.paper {
   border: 1px solid $lightgray;
   border-radius: 8px;
   background-color: $white;
   padding: 30px;
+  margin-bottom: 10px;
 }
 
 // Parent Title 
@@ -44,47 +45,3 @@
     text-decoration: none;
   }
 }
-
-.footer {
-  display: flex;
-  margin-top: 15px;
-  align-items: center;
-
-  h5.meta {
-    font-family: 'Roboto';
-    text-transform: none;
-    color: $lightgray2;
-
-    &.author {
-      display: inline-flex;
-      align-items: center;
-    }
-
-    .avatar {
-      width: 20px;
-      height: 20px;
-      margin-right: 8px;
-      font-size: 15px;
-    }
-  }
-  .metaDivider {
-    margin: 0 10px;
-  }
-  .metaButton {
-    padding: 0;
-    min-width: unset;
-    font-family: 'Roboto';
-    font-size: 14px;
-    letter-spacing: 0.09px;
-    line-height: 16px;
-    color: $lightgray2;
-
-    &:hover {
-      background: inherit;
-    }
-    img {
-      margin-right: 6px;
-    }
-  }
-}
-
