task: added heirarchy with updated data from API

--- a/src/components/ContributionTree/styles.module.scss
+++ b/src/components/ContributionTree/styles.module.scss
@@ -27,7 +27,7 @@
         background: $yellow;
       }
       &:nth-child(2) {
-        background: $lightbrown;
+        background: $orange;
       }
       &:nth-child(3) {
         background: $green;
