task: question form, validation, integration

--- a/src/components/SearchField/styles.module.scss
+++ b/src/components/SearchField/styles.module.scss
@@ -5,9 +5,10 @@ form.searchField {
   display: flex;
   align-items: center;
   max-width: 453px;
+  width: 100%;
   box-shadow: none;
   height: 55px;
-  border: 1px solid rgba(178,180,189,0.5);
+  border: 1px solid rgba(178, 180, 189, 0.5);
   border-radius: 27.5px;
   background-color: $white;
   height: 45px;
