--- a/src/pages/Member/index.scss
+++ b/src/pages/Member/index.scss
@@ -6,9 +6,10 @@
 }
 
 .appMain {
-  flex-grow: 1;
   height: 98vh;
   margin-top: 2vh;
   background: $offwhite;
-  border-top-left-radius: 12px;
+  overflow: hidden;
+  display: flex;
+  width: 100vw;
 }
