--- a/src/components/RightSidebar/styles.module.scss
+++ b/src/components/RightSidebar/styles.module.scss
@@ -1,7 +1,7 @@
 @import '~global/styles';
 
 div.sidebarWrapper {
-  width: 260px;
+  min-width: 250px;
   height: 98vh;
   background: $secondary;
   border-radius: 0;
