task: initial code for handling active contribution

--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -23,7 +23,7 @@ $green: #12B255;
 $indigo: #3476D6;
 $purple: #724586;
 
-$avatar-colors: $yellow, $orange, $green, $indigo, $purple, $darkorange, $primary, $secondary;
+$avatar-colors: $yellow, $orange, $green, $indigo, $purple, $darkorange, $primary;
 
 $theme-colors: (
   'primary': $primary,
