--- a/src/pages/Member/Question/components/styles.module.scss
+++ b/src/pages/Member/Question/components/styles.module.scss
@@ -20,6 +20,18 @@
       &.question.active > div {
         border: 1px solid $yellow;
       }
+      &.hypothesis.active > div {
+        border: 1px solid $orange;
+      }
+      &.experiment.active > div {
+        border: 1px solid $green;
+      }
+      &.data.active > div {
+        border: 1px solid $indigo;
+      }
+      &.analysis.active > div {
+        border: 1px solid $purple;
+      }
       &.hypothesis::after {
         content: '';
         width: 20px;
