--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -1,29 +1,30 @@
 $font-family: 'Roboto', sans-serrif;
-$background-color: #F1F5F8;
+$background-color: #f1f5f8;
 
 // Colors
-$primary: #EF8C20;
-$secondary: #121B3C;
-$gray: #B2B4BD;
-$gray2: #8E8E8E; // use in placeholders
-$gray3: #8A8A8A; // use in parent title of cards
-$lightgray: #E6E9EB;
-$lightgray2: #656A7C; // use in meta
+$primary: #ef8c20;
+$secondary: #121b3c;
+$gray: #b2b4bd;
+$gray2: #8e8e8e; // use in placeholders
+$gray3: #8a8a8a; // use in parent title of cards
+$lightgray: #e6e9eb;
+$lightgray2: #656a7c; // use in meta
 $darkgray1: #333333; // use in headers
-$darkgray2: #3A3A3A; // use in subheader / light headers
-$white: #FFF;
-$offwhite: #F1F5F8;
-$darkblue: #0A122D;
-$darkorange: #EF5F20;
-$red: #E50E56; //use in refute hypothesis
+$darkgray2: #3a3a3a; // use in subheader / light headers
+$white: #fff;
+$offwhite: #f1f5f8;
+$darkblue: #0a122d;
+$darkorange: #ef5f20;
+$red: #e50e56; //use in refute hypothesis
 // use in contribution heirarchy - in order QHED-AAA
-$yellow: #F2BA1D;
-$orange: #EC8A21;
-$green: #12B255;
-$indigo: #3476D6;
+$yellow: #f2ba1d;
+$orange: #ec8a21;
+$green: #12b255;
+$indigo: #3476d6;
 $purple: #724586;
 
-$avatar-colors: $yellow, $orange, $green, $indigo, $purple, $darkorange, $primary;
+$avatar-colors: $yellow, $orange, $green, $indigo, $purple,
+  $darkorange, $primary;
 
 $theme-colors: (
   'primary': $primary,
@@ -127,7 +128,6 @@ $spacers: (
   }
 }
 
-
 // Divider
 
 hr.MuiDivider-root {
@@ -140,7 +140,7 @@ hr.MuiDivider-root {
     .MuiAccordionSummary-content {
       margin: 0;
       padding: 0;
-  
+
       &.Mui-expanded {
         margin: 0;
       }
@@ -196,4 +196,8 @@ button.btn {
     padding: 0 45px;
     box-shadow: none;
   }
+}
+
+.ql-container.ql-snow {
+  height: 130px;
 }
