--- a/src/pages/Member/ContributionForm/components/style.module.scss
+++ b/src/pages/Member/ContributionForm/components/style.module.scss
@@ -5,6 +5,26 @@
     text-decoration: none;
   }
 
+  .question {
+    color: '#F2BA32';
+  }
+
+  .hypothesis {
+    color: '#EC8A2A';
+  }
+  
+  .experiment {
+    color: '#54B356';
+  }
+
+  .data {
+    color: '#3576D6';
+  }
+
+  .analysis {
+    color: '#724586';
+  }
+
   .addMedia {
     width: 18vh;
     height: 5vh;
