update: update test data for Question

--- a/src/pages/Member/ContributionForm/components/style.module.scss
+++ b/src/pages/Member/ContributionForm/components/style.module.scss
@@ -1,5 +1,17 @@
 @import '~global/styles';
 
+.button {
+  background-color: $primary;
+  color: white;
+  border-color: $primary;
+
+  &:hover {
+    background-color: white;
+    color: $primary;
+    border-color: white;
+  }
+}
+
 .form {
   .typography {
     text-decoration: none;
