polish card button

--- a/src/components/Card/Footer/styles.module.scss
+++ b/src/components/Card/Footer/styles.module.scss
@@ -12,6 +12,7 @@ button {
   display: flex;
   margin-top: 15px;
   align-items: center;
+  position: relative;
 
   .rightFooter {
     position: absolute;
