--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -9,10 +9,12 @@ $gray2: #8e8e8e; // use in placeholders
 $gray3: #8a8a8a; // use in parent title of cards
 $lightgray: #e6e9eb;
 $lightgray2: #656a7c; // use in meta
+$lightgray3: #9D9D9D;
 $darkgray1: #333333; // use in headers
 $darkgray2: #3a3a3a; // use in subheader / light headers
 $white: #fff;
 $offwhite: #f1f5f8;
+$blue: #557CE0; // use in media links
 $darkblue: #0a122d;
 $darkorange: #ef5f20;
 $red: #e50e56; //use in refute hypothesis
@@ -106,6 +108,13 @@ $spacers: (
     line-height: 24px;
     color: $darkgray2;
   }
+  &.MuiTypography-h4 {
+    font-family: 'Roboto-Medium';
+    font-size: 18px;
+    letter-spacing: 0.11px;
+    line-height: 21px;
+    color: $darkgray2;
+  }
   &.MuiTypography-h5 {
     font-family: 'Roboto-Medium';
     font-size: 14px;
@@ -191,7 +200,6 @@ button.btn {
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 0.09px;
-    line-height: 16px;
     color: $primary;
     padding: 0 45px;
     box-shadow: none;
