--- a/src/components/Card/RelatedMedia/styles.module.scss
+++ b/src/components/Card/RelatedMedia/styles.module.scss
@@ -23,6 +23,12 @@
       line-height: 24px;
       color: $lightgray3;
       margin-right: 20px;
+
+      span.icon {
+        position: relative;
+        top: 3px;
+        margin-right: 7px;
+      }
     }
   }
 }
@@ -34,11 +40,30 @@
 
     li {
       padding-bottom: 33px;
+      display: inline-flex;
+      width: 100%;
+
       &:not(:first-child) {
         padding-top: 33px;
       }
       &:not(:last-child) {
         border-bottom: 1px solid rgba(178, 180, 189, 0.5);
+      }
+
+      .mediaIcon {
+        width: 45px;
+        span {
+          position: relative;
+          top: 3px;
+        }
+      }
+
+      .link {
+        span.icon {
+          position: relative;
+          top: 1px;
+          margin-right: 7px;
+        }
       }
     }
   }
