--- a/src/pages/Member/Question/components/styles.module.scss
+++ b/src/pages/Member/Question/components/styles.module.scss
@@ -4,6 +4,8 @@
   ul.heirarchyList {
     list-style-type: none;
     padding: 0;
+    margin-bottom: 50px;
+    
     li.contribution {
       position: relative;
       cursor: pointer;
