--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -9,12 +9,12 @@ $gray2: #8e8e8e; // use in placeholders
 $gray3: #8a8a8a; // use in parent title of cards
 $lightgray: #e6e9eb;
 $lightgray2: #656a7c; // use in meta
-$lightgray3: #9D9D9D;
+$lightgray3: #9d9d9d;
 $darkgray1: #333333; // use in headers
 $darkgray2: #3a3a3a; // use in subheader / light headers
 $white: #fff;
 $offwhite: #f1f5f8;
-$blue: #557CE0; // use in media links
+$blue: #557ce0; // use in media links
 $darkblue: #0a122d;
 $darkorange: #ef5f20;
 $red: #e50e56; //use in refute hypothesis
@@ -206,6 +206,10 @@ button.btn {
   }
 }
 
+.MuiBackdrop-root {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 .ql-container.ql-snow {
-  height: 130px;
+  height: 100px;
 }
