--- a/src/components/PageContentWrapper/styles.module.scss
+++ b/src/components/PageContentWrapper/styles.module.scss
@@ -11,7 +11,14 @@
 .backNav {
   margin-bottom: 30px;
   cursor: pointer;
+
   h4.back {
     font-family: 'Roboto';
+
+    .icon {
+      position: relative;
+      top: -1px;
+      margin-right: 15px;
+    }
   }
 }
