--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -186,8 +186,18 @@ span {
   }
 }
 
-// Buttons target root mui classes later @k
+// Loader 
 
+.loaderWrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #E2E2E4;
+}
+
+// Buttons target root mui classes later @k
 button.btn {
   box-sizing: border-box;
   height: 45px;
