--- a/src/pages/Member/ContributionForm/components/style.module.scss
+++ b/src/pages/Member/ContributionForm/components/style.module.scss
@@ -19,6 +19,35 @@
     text-decoration: none;
   }
 
+  .list {
+    width: 100%;
+
+    .typography {
+      color: #ef8c20;
+
+      .deleteIcon {
+        position: relative;
+        top: 2px;
+        margin-right: 6px;
+      }
+    }
+  }
+
+  .backNav {
+    margin-bottom: 30px;
+    cursor: pointer;
+
+    h4.back {
+      font-family: 'Roboto';
+
+      .icon {
+        position: relative;
+        top: -1px;
+        margin-right: 15px;
+      }
+    }
+  }
+
   .addMedia {
     width: 18vh;
     height: 5vh;
