Create about us page

--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -71,7 +71,10 @@ $spacers: (
     margin-bottom: 10px !important;
   }
   &-15 {
-    margin-bottom: 15px;
+    margin-bottom: 15px !important;
+  }
+  &-20 {
+    margin-bottom: 20px !important;
   }
 }
 
