--- a/src/pages/Member/Home/style.module.scss
+++ b/src/pages/Member/Home/style.module.scss
@@ -19,10 +19,11 @@
 
 .paperListHeader {
   margin-top: 4em;
+  margin-bottom: 1.5em;
 }
 
 .content {
-  margin-top: 2em;
+  margin-top: .5em;
   cursor: pointer;
 }
 
