--- a/src/pages/Member/ContributionForm/components/style.module.scss
+++ b/src/pages/Member/ContributionForm/components/style.module.scss
@@ -33,17 +33,28 @@
     }
   }
 
-  .backNav {
-    margin-bottom: 30px;
-    cursor: pointer;
+  .btnBack {
+    background-color: inherit;
+    border: none;
+    outline: none;
+    
+    .btnBack:focus,
+    .btnBack:active:focus,
+    .btnBack.active:focus,
+    .btnBack.focus,
+    .btnBack:active.focus,
+    .backNav {
+      margin-bottom: 30px;
+      cursor: pointer;
 
-    h4.back {
-      font-family: 'Roboto';
+      h4.back {
+        font-family: 'Roboto';
 
-      .icon {
-        position: relative;
-        top: -1px;
-        margin-right: 15px;
+        .icon {
+          position: relative;
+          top: -1px;
+          margin-right: 15px;
+        }
       }
     }
   }
