--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -58,6 +58,10 @@ $spacers: (
   &-40 {
     padding: 40px;
   }
+
+  &-lr25 {
+    padding: 0 25px !important;
+  }
 }
 
 .mt {
@@ -174,6 +178,194 @@ hr.MuiDivider-root {
   }
 }
 
+// Forms
+
+.inputWrapper {
+  .label {
+    color: $darkgray1;
+    font-family: 'Roboto-Medium';
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.1px;
+    line-height: 19px;
+
+    .required {
+      color: $red;
+      font-weight: bold;
+    }
+  }
+
+  .input {
+    width: 100%;
+    margin-top: 10px;
+    
+    .MuiInputBase-root {
+      border-radius: 8px !important;
+      // background: $white;
+
+      .MuiInputBase-input {
+        border: 1px solid rgba(178,180,189,0.5);
+        box-shadow: none;
+        font-size: 16px;
+        letter-spacing: 0.1px;
+        line-height: 19px;
+        border-radius: 8px;
+        background: $white;
+        max-height: 45px;
+        padding: 12px 17px;
+      }
+
+      .MuiOutlinedInput-notchedOutline {
+        border: none;
+      }
+    }
+  }
+
+  .quill.input {
+    background: $white;
+    border-radius: 8px;
+    .ql-toolbar.ql-snow {
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
+    }
+    .ql-container.ql-snow {
+      border-bottom-left-radius: 8px;
+      border-bottom-right-radius: 8px;
+    }
+  }
+}
+
+.multiSelectWrapper {
+  .label {
+    color: $darkgray1;
+    font-family: 'Roboto-Medium';
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.1px;
+    line-height: 19px;
+
+    .required {
+      color: $red;
+      font-weight: bold;
+    }
+  }
+
+  .input {
+    width: 100%;
+    margin-top: 10px;
+    
+    .MuiInputBase-root {
+      border-radius: 8px !important;
+      padding: 5px 17px !important;
+      border: 1px solid rgba(178,180,189,0.5);
+      box-shadow: none;
+      background: $white;
+      min-height: 45px;
+      max-height: 45px;
+
+      .MuiInputBase-input {
+        border: none;
+        box-shadow: none;
+        font-size: 16px;
+        letter-spacing: 0.1px;
+        line-height: 19px;
+        padding: 0 !important;
+        padding-left: 8px !important;
+      }
+
+      .MuiOutlinedInput-notchedOutline {
+        border: none;
+      }
+
+      .MuiChip-root {
+        background: $primary;
+        color: $white;
+        font-size: 14px;
+        letter-spacing: 0.09px;
+        line-height: 16px;
+        height: 30px;
+
+        // temp: replace with x icon
+        .MuiSvgIcon-root {
+          fill: $white;
+        }
+      }
+    }
+  }
+}
+
+.inputCard {
+  padding: 11px 17px;
+  border-radius: 8px !important;
+  border: 1px solid rgba(178,180,189,0.5) !important;
+  min-height: 45px;
+  max-height: 45px;
+
+  .MuiCardContent-root {
+    padding: 0 !important;
+
+    p.inputContent {
+      font-size: 16px;
+      letter-spacing: 0.1px;
+      line-height: 24px;
+      color: $darkgray2;
+    }
+  }
+}
+
+.radioWrapper {
+  .label {
+    color: $darkgray1;
+    font-family: 'Roboto-Medium';
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.1px;
+    line-height: 19px;
+    margin-bottom: 17px;
+
+    .required {
+      color: $red;
+      font-weight: bold;
+    }
+  }
+
+  .radio {
+    box-sizing: border-box;
+    height: 25px;
+    border: 1px solid $gray;
+    opacity: 0.5;
+    border-radius: 12.5px;
+    padding: 0 15px;
+    margin-right: 20px;
+
+    span.MuiTypography-root {
+      font-family: 'Roboto-Medium';
+      font-size: 14px;
+      letter-spacing: 0.11px;
+      line-height: 21px;
+      color: $darkgray2;
+      text-transform: uppercase;
+    }
+
+    &.active {
+      opacity: 1;
+    }
+
+    &.supports {
+      border: 1px solid $green;
+      span.MuiTypography-root {
+        color: $green;
+      }
+    }
+    &.refutes {
+      border: 1px solid $red;
+      span.MuiTypography-root {
+        color: $red;
+      }
+    }
+  }
+}
+
 // Contribution Colors
 
 // @temp: move when data is available
@@ -203,7 +395,7 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #E2E2E4;
+  background: $gray;
 }
 
 // Buttons target root mui classes later @k
@@ -211,11 +403,54 @@ button.btn {
   box-sizing: border-box;
   height: 45px;
   border-radius: 27px;
+  box-shadow: none !important;
 
   span {
     font-family: 'Roboto-Medium';
   }
 
+  &.submitBtn {
+    min-width: 187px;
+  }
+
+  // used in new questio btn etc.
+  &.primary {
+    border-radius: 25px;
+    background-color: $primary;
+    font-size: 14px;
+    letter-spacing: 0.44px;
+    line-height: 16px;
+    padding: 0 20px;
+    color: $white;
+    font-family: 'Roboto-Bold';
+
+    .MuiButton-label svg {
+      margin-right: 8px;
+    }
+  }
+
+  &.secondary {
+    border-radius: 25px;
+    background-color: transparent;
+    border: 1px solid $primary;
+    font-size: 14px;
+    letter-spacing: 0.44px;
+    line-height: 16px;
+    padding: 0 20px;
+    color: $primary;
+    font-family: 'Roboto-Bold';
+
+    .MuiButton-label svg {
+      margin-right: 8px;
+    }
+
+    &.Mui-disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
+  }
+
+  // used in add related media
   &.dashed {
     border: 1px dashed $primary;
     background: transparent;
@@ -227,6 +462,8 @@ button.btn {
     box-shadow: none;
   }
 
+
+  // used in modal/dialog
   &.contained {
     border-radius: 25px;
     background-color: $primary;
@@ -237,6 +474,7 @@ button.btn {
     color: $white;
   }
 
+  // used in modal/dialog
   &.outline {
     border-radius: 25px;
     background-color: transparent;
