--- a/src/pages/Member/ContributionForm/components/style.module.scss
+++ b/src/pages/Member/ContributionForm/components/style.module.scss
@@ -1,19 +1,25 @@
 @import '~global/styles';
 
-.button {
-  background-color: $primary;
-  color: white;
-  border-color: $primary;
-
-  &:hover {
-    background-color: white;
-    color: $primary;
-    border-color: white;
-  }
-}
-
 .form {
   padding-right: 5vh;
+
+  .label {
+    color: $darkgray1;
+    font-family: 'Roboto-Medium';
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 0.1px;
+    line-height: 19px;
+  }
+
+  .draftText {
+    font-size: 16px;
+    font-style: italic;
+    letter-spacing: 0.1px;
+    line-height: 19px;
+    color: $gray2;
+    text-align: right;
+  }
 
   .typography {
     text-decoration: none;
@@ -59,47 +65,12 @@
     }
   }
 
-  .addMedia {
-    width: 18vh;
-    height: 5vh;
-    color: #ef8c20;
-    font-weight: bold;
-    border-color: #ef8c20;
-    border-radius: 3vh;
-  }
-
   .btnContainer {
     position: relative;
     bottom: 0;
     right: 0;
     text-align: end;
-
-    .publishBtn {
-      width: 18vh;
-      height: 5vh;
-      margin-left: 20px;
-      color: white;
-      font-weight: bold;
-      background-color: #ef8c20;
-      border-radius: 3vh;
-    }
-
-    .addBtn {
-      width: 18vh;
-      height: 5vh;
-      color: #ef8c20;
-      font-weight: bold;
-      border-color: #ef8c20;
-      border-radius: 3vh;
-    }
-
-    .deleteBtn {
-      width: 18vh;
-      height: 5vh;
-      color: red;
-      font-weight: bold;
-      border-color: red;
-      border-radius: 3vh;
-    }
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
 }
