additional ui issue fixes

--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -159,6 +159,13 @@ hr.MuiDivider-root {
   margin: 30px 0;
 }
 
+.cardBody {
+  *, 
+  img {
+    max-width: 100%;
+  }
+}
+
 // Accordion
 .MuiAccordion-root {
   .MuiAccordionSummary-root {
