--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -492,6 +492,22 @@ button.btn {
     padding: 0 60px;
     color: $primary;
   }
+
+  &.delete {
+    border-radius: 25px;
+    background-color: transparent;
+    border: 1px solid $red;
+    font-size: 14px;
+    letter-spacing: 0.44px;
+    line-height: 16px;
+    padding: 0 20px;
+    color: $red;
+    font-family: 'Roboto-Bold';
+
+    .MuiButton-label svg {
+      margin-right: 8px;
+    }
+  }
 }
 
 // dialog 
