revert loader bg

--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -402,7 +402,7 @@ span {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: $gray;
+  background: #E2E2E4;
 }
 
 // Buttons target root mui classes later @k
