--- a/src/pages/Member/Static/styles.module.scss
+++ b/src/pages/Member/Static/styles.module.scss
@@ -29,6 +29,28 @@
     margin-bottom: 40px;
   }
 
+  .pageMaintenance {
+    margin-bottom: 35px;
+  }
+
+
+  .header {
+    font-family: 'Roboto-Bold';
+    font-size: 36px;
+    letter-spacing: 0.23px;
+    line-height: 36px;
+    margin-bottom: 25px;
+    color: $white;
+  }
+
+  .subheader {
+    color: $white;
+    font-family: 'Roboto';
+    font-size: 24px;
+    letter-spacing: 0.15px;
+    line-height: 36px;
+  }
+
   .h1 {
     color: $white;
     font-family: 'Roboto';
