--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -562,3 +562,8 @@ div.dialog {
 .ql-container.ql-snow {
   height: 100px;
 }
+
+.search-term {
+  color: $primary;
+  font-family: 'Roboto-Medium';
+}
