--- a/src/components/ContributionTree/styles.module.scss
+++ b/src/components/ContributionTree/styles.module.scss
@@ -68,6 +68,10 @@
         top: 8px;
         border-top: 1px solid rgba(255, 255, 255, 0.5);
       }
+
+      &.analysis::after{
+        display: none;
+      }
     }
 
     ul.subtree {
