--- a/src/pages/Member/Home/style.module.scss
+++ b/src/pages/Member/Home/style.module.scss
@@ -25,7 +25,7 @@
     .details {
       display: flex;
       align-items: center;
-      padding: 0 2em;
+      padding: 35px 25px;
       
       .introImg {
         margin-right: 20px;
@@ -41,13 +41,19 @@
           cursor: pointer;
         }
 
-        .leadTitle {
-          font-weight: bold;
-          padding-bottom: .5em;
+        h2.leadTitle {
+          font-family: 'Roboto-Medium';
+          font-size: 20px;
+          font-weight: 500;
+          letter-spacing: 0.4px;
+          line-height: 24px;
+          margin-bottom: 12px;
         }
     
         .leadContent {
           font-size: 16px;
+          letter-spacing: 0.1px;
+          line-height: 24px;
         }
       }
     }
