--- a/src/pages/Member/ContributionForm/components/style.module.scss
+++ b/src/pages/Member/ContributionForm/components/style.module.scss
@@ -29,7 +29,7 @@
     width: 100%;
 
     .typography {
-      color: #ef8c20;
+      color: #E84441;
 
       .deleteIcon {
         position: relative;
